# tree-sitter-test_highlights

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  flake.nix  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-test-highlights.pc.in
bindings/c/tree_sitter/: tree-sitter-test-highlights.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_test_highlights/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTestHighlightsTests/: TreeSitterTestHighlightsTests.swift
docs/: README.md
queries/test_highlights/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/: all-groups.test_highlights
